--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "core-js": "^3.8.3",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
