Fix: header toast

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 VUE_APP_API_URL=http://localhost:3000/api
+
+VUE_APP_FIREBASE_API_KEY=AIzaSyDqs0sBQZs28D6FsZZbdL6IKhZ9HU7zQfA
+VUE_APP_FIREBASE_AUTH_DOMAIN=graving-86fcb.firebaseapp.com
+VUE_APP_FIREBASE_PROJECT_ID=graving-86fcb
+VUE_APP_FIREBASE_STORAGE_BUCKET=graving-86fcb.firebasestorage.app
+VUE_APP_FIREBASE_MESSAGING_SENDER_ID=137581647854
+VUE_APP_FIREBASE_APP_ID=1:137581647854:web:92939f4df06690dcabe0ff
+VUE_APP_FIREBASE_MEASUREMENT_ID=G-1YNHV9PC22
