Update: form validations

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
