--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "firebase": "^11.7.3",
+    "jspdf": "^3.0.1",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.2.13",
