--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 VUE_APP_API_URL=http://localhost:3000/api
 
+# Production URL
+# VUE_APP_API_URL=https://graving-backend-production.up.railway.app/api
+
 VUE_APP_FIREBASE_API_KEY=AI
 VUE_APP_FIREBASE_AUTH_DOMAIN=g
 VUE_APP_FIREBASE_PROJECT_ID=g
